# pywebify

./: .buildinfo  .gitignore  README.md  README.rst  config.html  config.ini  fileio.html  files.py  genindex.html  index.html  install.html  launch.html  overview.html  params.json  pyproject.toml  pywebify.py  replaces.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: tests.yml
_sources/: config.rst.txt  config.txt  fileio.txt  index.txt  install.txt  launch.rst.txt  launch.txt  overview.txt  templates.txt
doc/source/: conf.py  fileio.rst  install.rst  launch.rst  overview.rst
doc/source/_files/: 00D0D_1D9bziHgV4a_600x450.html  config.ini
doc/source/_static/: theme_overrides.css
js/: div_switch.js
pywebify/: __init__.py  config.ini  fileio.py  files.py  notes.txt  pywebify.py  template.py  webpage.py
pywebify/doc/: Makefile  make.bat
pywebify/doc/source/: conf.py  config.rst  index.rst  launch.rst  overview.rst  templates.rst
pywebify/js/: collapse.js  div_switch.js  div_toggle.js  filter.js
pywebify/templates/css/: collapse.css  rst.css  webify.css
pywebify/templates/html/: navbar.html  webify.html
pywebify/templates/jinja/: tabs.html  webpage.html
pywebify/tests/: config_with_index.ini  test_pywebify.py  tests.py  webpages.ipynb
pywebify/tests/Example/: index.html
pywebify/tests/Example/Data Files/: sin.html
pywebify/tests/Example/pywebify_index/: report.html
pywebify/tests/Example/pywebify_logo/js/: div_switch.js
pywebify/tests/c:\temp/: tabs1.html
pywebify/tests/ctemp/: tabs1.html
pywebify/tests/templates/css/: rst.css  webify.css
pywebify/tests/templates/html/: webify.html
pywebify/tests/test_txt_files/make_index/: html.txt
pywebify/tests/test_txt_files/make_logo/: html.txt  navbar.txt
src/pywebify/: __init__.py  config.ini  config.ini.rej  config.py  html.py  pywebify.py  template.py
src/pywebify/js/: div_switch.js  div_toggle.js
src/pywebify/templates/css/: collapse.css  filter.css  pixelate.css  rst.css  webify.css
src/pywebify/templates/html/: navbar.html  webify.html
src/pywebify/templates/jinja/: tabs.html  webpage.html
templates/: webify.html
templates/css/: navbar.css  webify.css
tests/: config_with_index.ini  config_with_logo.ini  file_list.csv  test_config.py  test_html.py  test_pywebify.py  tests.py
tests/Example/: index.html  index.rst  report.html
tests/Example/Data Files/: Summary.html  Summary.rst
tests/Example/pywebify/css/: report.css
tests/Example/pywebify/js/: jquery.min.js
tests/Example/pywebify/pywebify/js/: jquery.min.js
tests/Example/pywebify_index/css/: report.css
tests/Example/pywebify_logo/: report.html
tests/Example/pywebify_logo/js/: collapse.js
tests/templates/css/: collapse.css  pixelate.css
tests/templates/html/: navbar.html
