[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
python-tag = py34

[metadata]
name = pywebify
version = file: src/pywebify/version.txt
description = Utility to create browser-based reports of images and html files for easy data analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Steve Nicholes
license = GPLv3
url = https://github.com/endangeredoxen/pywebify
download_url = https://github.com/endangeredoxen/pywebify/archive/refs/tags/v0.3.0.tar.gz
platforms = linux, osx, win32
classifiers=
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    fivecentfileio >= 0.2.11
python_requires = >=3.6

[options.packages.find]
where = src
exclude = doc, __pycache__, tests*

[options.package_data]
pywebify = config.ini, setup.txt, img/*, js/*, templates/css/*, templates/html/*, templates/jinja/*

[flake8]
max-line-length = 120
docstring-convention = google