[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
python-tag = py34

[metadata]
name = pywebify
version = file: src/pywebify/version.txt
description = Utility to create browser-based reports of images and html files for easy data analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Steve Nicholes
license = GPLv3
url = https://github.com/endangeredoxen/pywebify
download_url = https://github.com/endangeredoxen/pywebify/archive/refs/tags/v0.3.0.tar.gz
platforms = linux, osx, win32
classifiers=
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    pandas
    numpy
    natsort
python_requires = >=3.6

[options.packages.find]
where = src
exclude = doc, __pycache__, tests*

[options.package_data]
pywebify = config.ini, setup.txt, img/*, js/*, templates/css/*, templates/html/*, templates/jinja/*

[options.extras_require]
test = pytest==7.1.2
       pytest-benchmark==3.4.1
       pytest-cov==3.0.0
       flake8==6.0.0
doc = sphinx==4.1.2
      nbsphinx==0.8.6
      sphinx_rtd_theme==0.5.2
      sphinxcontrib-napoleon==0.7
      nbconvert==5.6.1
      jupyter==1.0.0
      jupyter-contrib-nbextensions==0.5.1
      jupyterlab-pygments==0.1.2
      jupyter-contrib-core==0.3.3
      jinja2==3.0.1
      pandoc==2.2

[flake8]
max-line-length = 120
docstring-convention = google